Remove unnecessary method of EmfImportEngine